test/Interop/Cxx/class/inheritance/virtual-methods-typechecker.code
// RUN: %target-typecheck-verify-language -verify-ignore-unknown -I %S/Inputs -cxx-interoperability-mode=upcoming-language
// RUN: %target-typecheck-verify-language -verify-ignore-unknown -I %S/Inputs -cxx-interoperability-mode=language-5.9
// RUN: %target-typecheck-verify-language -verify-ignore-unknown -I %S/Inputs -cxx-interoperability-mode=language-6

import VirtualMethods

immutable _ = Base() // expected-error {{'init()' is unavailable: constructors of abstract C++ classes are unavailable in Codira}}
immutable _ = Base2() // expected-error {{'init()' is unavailable: constructors of abstract C++ classes are unavailable in Codira}}

immutable _ = DerivedInt()
immutable _ = Derived2()
immutable _ = Derived3()
immutable _ = Derived4()
immutable _ = DerivedFromDerived2()

VirtualNonAbstractBase().nonAbstractMethod()

fn callVirtualRenamedMethod(_ b: Base) {
  b.virtualRename()  // expected-error {{value of type 'Base' has no member 'virtualRename'}}
  b.codeVirtualRename()
}
